# timdex-semantic-builder

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  Pipfile  README.md  pyproject.toml  renovate.json
.github/workflows/: ci.yml  dev-build.yml  prod-deploy.yml  stage-build.yml
lambdas/: config.py  my_function.py  query_tokenizer.py  tokenizer_handler.py
opensearch-project/opensearch-neural-sparse-encoding-doc-v3-gte/: README.md  tokenizer_config.json
tests/: conftest.py  test_config.py  test_my_function.py  test_query_tokenizer.py  test_tokenizer_handler.py
tests/sam/: env.json.template  event.json  template.yaml
