[project]
name = "python-lambda-template"
version = "2.0.0"
requires-python = ">=3.14"

dependencies = [
    "python-dotenv>=1.2.2",
    "sentry-sdk>=2.29.1",
    "transformers[torch]>=5.2.0",
]

[dependency-groups]
dev = [
    "aws-lambda-typing>=2.2.0",
    "coveralls>=4.0.1",
    "ipython>=9.2.0",
    "mypy>=1.15.0",
    "pip-audit>=2.9.0",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "ruff>=0.11.11",
]

[tool.black]
line-length = 90

[tool.mypy]
disallow_untyped_calls = true
disallow_untyped_defs = true
exclude = ["tests/"]

[tool.pytest.ini_options]
log_level = "INFO"

[tool.ruff]
target-version = "py314"

# set max line length
line-length = 90

# enumerate all fixed violations
show-fixes = true

[tool.ruff.lint]
select = ["ALL", "PT"]
ignore = [
    "COM812",
    "D107",
    "N812",
    "PTH",
    "C90",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "PLR0912",
    "PLR0913",
    "PLR0915",
    "S321",
]

# allow autofix behavior for specified rules

[tool.ruff.lint.flake8-annotations]
mypy-init-return = true

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = [
    "ANN",
    "ARG001",
    "S101",
    "SLF001",
    "PLR2004",
]

[tool.ruff.lint.pycodestyle]
max-doc-length = 90

[tool.ruff.lint.pydocstyle]
convention = "google"
